--- a/Config/Tags/GameplayTags.ini
+++ b/Config/Tags/GameplayTags.ini
@@ -1,3 +1,5 @@
 [/Script/GameplayTags.GameplayTagsList]
 GameplayTagList=(Tag="Character.Abilities.Charge",DevComment="Charge ability for main character")
+GameplayTagList=(Tag="Character.Effect.Charge",DevComment="Ability effects")
+GameplayTagList=(Tag="GameplayCue.Ability.Charge",DevComment="Gameplay cue for charge")
 
